--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
+  <!-- Import Google Icon Font -->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Import materialize.css -->
+  <link href="CDN OR PATH TO NODE_MODULES.css" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -44,6 +48,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- Import materialize.js -->
+  <script src="CDN OR PATH TO NODE_MODULES.js"></script>
+  <!-- And then your bundled js -->
+  <script src="path/to/your/bundle.js"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
