--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <!-- Import Google Icon Font -->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Import materialize.css -->
-  <link href="CDN OR PATH TO NODE_MODULES.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -48,10 +48,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <!-- Import materialize.js -->
-  <script src="CDN OR PATH TO NODE_MODULES.js"></script>
-  <!-- And then your bundled js -->
-  <script src="path/to/your/bundle.js"></script>
+<!--  &lt;!&ndash; Import materialize.js &ndash;&gt;-->
+<!--  <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>-->
+<!--  &lt;!&ndash; And then your bundled js &ndash;&gt;-->
+<!--  <script src="path/to/your/bundle.js"></script>-->
   <div id="root"></div>
   <!--
       This HTML file is a template.
